--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "MIT",
     "dependencies": {
         "discord.js": "^13.7.0",
-        "dotenv": "^16.0.1"
+        "dotenv": "^16.0.1",
+        "git-last-commit": "^1.0.1"
     }
 }
