--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm install pm2 -g
 
       - name: Install tsc
-        run: npm install tsc -g
+        run: npm install typescript -g
 
       - name: Kill PM2 instance
         run: npm run pm2:kill
