--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "dependencies": {
         "discord.js": "^13.7.0",
         "dotenv": "^16.0.1"
+    },
+    "devDependencies": {
+        "typescript": "*"
     }
 }
