--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,15 +32,15 @@ jobs:
       - name: Install tsc
         run: npm install typescript -g
 
-      - name: Install forever
-        run: npm install forever -g
-
       - name: Build ts->js
         run: npm run build
 
-      - name: Kill old process
-        run: npm run stop:forever
+      # we just leave running the app to the system processes, anything run here is isolated
+      # and shit
 
-      - name: Start forever process
-        # if: always() # runs regardless of previous fails
-        run: npm run start:forever
+      # - name: Kill old process
+      #   run: npm run stop:forever
+
+      # - name: Start forever process
+      #   # if: always() # runs regardless of previous fails
+      #   run: npm run start:forever
