--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "discord.js": "^13.7.0",
         "dotenv": "^16.0.1",
+        "firebase": "^9.13.0",
         "firebase-admin": "^11.2.0"
     },
     "devDependencies": {
