--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "screm",
     "version": "1.0.0",
-    "description": "",
+    "description": "hi",
     "main": "index.js",
     "scripts": {
         "start": "npm run build && node dist/index.js",
