--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ on:
 
 env:
   TOKEN: ${{ secrets.TOKEN }}
+  FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -34,6 +35,12 @@ jobs:
 
       - name: Build ts->js
         run: npm run build
+
+      - name: Fetch Firebase Credentials
+        env:
+          FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
+        run: |
+          echo "$FIREBASE_CREDENTIALS" > serviceAccountKey.json
 
       - name: Frontend UI build
         run: cd frontend && npm install && npm run build
