--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
         env:
           FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
         run: |
-          echo "$FIREBASE_CREDENTIALS" > serviceAccountKey.json
+          echo "$FIREBASE_CREDENTIALS" > ./dist/serviceAccountKey.json
 
       - name: Frontend UI build
         run: cd frontend && npm install && npm run build
